Add dry run endpoint
